--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-
 body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
 
-/* Navbar Style */
+
 .navbar {
     background-image: url('Images/Hero-bg.png');
     background-size: cover;
@@ -22,15 +21,21 @@ body {
     color: darkblue; 
 }
 
-/* Button Style */
+
 .btn {
-    background-color: darkblue; 
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 4px;
+    background-color: transparent;     
+    color: darkblue;                   
+    border: 2px solid darkblue;        
+    padding: 12px 24px;                
+    border-radius: 6px;               
     font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.btn:hover {
+    background-color: darkblue;
+    color: white;
 }
 
 
@@ -49,11 +54,15 @@ body {
     color: black; 
 }
 
+
 .action-box {
-    background-color: white;
-    margin: 40px 20px;
-    border: 2px solid #ddd;
-    border-radius: 10px;
+    background-color: #e6f2ff;
+    margin: 40px auto;
+    padding: 30px;
+    width: 90%;
+    max-width: 1000px;
+    border: 1px solid #ccc;
+    border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
@@ -68,7 +77,7 @@ body {
 
 .action-left {
     flex: 1;
-    min-width: 250px;
+    min-width: 200px;
     padding: 20px;
 }
 
@@ -85,11 +94,59 @@ body {
 
 .action-right {
     flex: 1;
-    min-width: 250px;
+    min-width: 200px;
     text-align: center;
 }
 
 .action-right img {
     max-width: 100%;
     height: auto;
+}
+
+
+.users-box {
+    margin: 40px auto;
+    padding: 30px;
+    width: 90%;
+    max-width: 1000px;
+    background-color: #e6f2ff;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    text-align: center;
+}
+
+
+.users-box h2 {
+    color: darkblue;
+    margin-bottom: 25px;
+    font-size: 24px;
+}
+
+
+.stats-row {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+
+.stat-card {
+    background-color: white;
+    border-radius: 8px;
+    padding: 25px 30px;
+    flex: 1;
+    min-width: 120px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.stat-card h3 {
+    margin: 0;
+    font-size: 33px;
+    color: black;
+}
+
+.stat-card p {
+    margin: 5px 0 0;
+    color: #444;
 }
